# DiscordVcTts

./: .gitmodules  CMakeLists.txt  README.md  config.json  mem_tests.py
src/: bot.c  bot.h  main.c  tts_queue.c  tts_queue.h  utils.c  utils.h
tests/: main.c  test_utils.c  test_utils.h
